--- a/ConfigurablePdfFont/composer.json
+++ b/ConfigurablePdfFont/composer.json
@@ -8,7 +8,7 @@
     ],
     "description": "Magento2 extension for Japanese Pdf Fonts.",
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0||~8.1.0||~8.2.0",
         "magento/framework": "^102.0.0"
     },
     "suggest": {
