--- a/FontSourceHanSansJapanese/composer.json
+++ b/FontSourceHanSansJapanese/composer.json
@@ -7,7 +7,7 @@
     ],
     "description": "Source Han Sans Japanese font for PDF generation in Magento 2.",
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0||~8.1.0||~8.2.0",
         "magento/framework": "^102.0.0"
     },
     "suggest": {
